Features section finished.

--- a/src/components/ui/Section/Section.scss
+++ b/src/components/ui/Section/Section.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/abstracts/index';
 
 .c-section {
-  margin-bottom: pad(2xlarge);
-  margin-top: pad(2xlarge);
+  padding-bottom: pad(2xlarge);
+  padding-top: pad(2xlarge);
 }
