Home page finished.

--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -41,6 +41,9 @@ $color-fountain-blue: #4db6ac;
 $color-regent-st-blue: #a0d3e8;
 $color-trout: #50515e;
 $color-alto: #d9d9d9;
+$color-steel-gray: #1a1b26;
+$color-pale-sky: #717a85;
+$color-gray-chateau: #a1a4a8;
 
 //
 // Project Colors
