--- a/src/styles/base/utilities/_colors.scss
+++ b/src/styles/base/utilities/_colors.scss
@@ -58,6 +58,10 @@
   color: $color-alto;
 }
 
+.u-color-steel-gray {
+  color: $color-steel-gray;
+}
+
 //
 // Background
 //
@@ -108,4 +112,8 @@
 
 .u-bg-alto {
   background-color: $color-alto;
+}
+
+.u-bg-steel-gray {
+  background-color: $color-steel-gray;
 }
