--- a/src/components/sections/Search/Search.scss
+++ b/src/components/sections/Search/Search.scss
@@ -10,36 +10,26 @@
     color: $color-white;
     font-size: $g-font-size-small;
     outline: 0;
-    padding: px-to-rem(13px) px-to-rem(24px);
+    padding: px-to-rem(13px) pad(xsmall);
     width: 100%;
   }
 
   &__suggestions-container {
-    border-radius: 4px;
+    border-radius: px-to-rem(4px);
     color: $secondary-color;
+    margin-top: px-to-rem(4px);
     position: absolute;
     right: 0;
-    width: px-to-rem(400px);
-
-    &--open::before {
-      background-color: transparent;
-      border-color: transparent transparent $color-tuatara;
-      border-style: solid;
-      border-width: 0 px-to-rem(10px) px-to-rem(10px);
-      content: '';
-      display: inline-block;
-      margin-left: px-to-rem(365px);
-      margin-top: 10px;
-      text-align: right;
-      vertical-align: middle;
-    }
+    width: 100%;
   }
 
   &__suggestions-section-title {
-    background-color: $color-tuatara;
+    background-color: $color-cinder;
     color: $color-white;
+    font-family: $g-font-family-primary;
+    font-weight: bold;
     margin: 0;
-    padding: pad(2xsmall) pad(xsmall);
+    padding: pad(2xsmall);
   }
 
   &__suggestions-list {
@@ -50,8 +40,9 @@
   }
 
   &__suggestion {
-    color: $primary-color;
-    padding: pad(2xsmall) pad(xsmall);
+    color: $color-comet;
+    font-family: $g-font-family-secondary;
+    padding: px-to-rem(6px) pad(2xsmall);
   }
 
   &__suggestion--highlighted {
