--- a/src/styles/base/utilities/_text.scss
+++ b/src/styles/base/utilities/_text.scss
@@ -111,3 +111,15 @@
 .u-font-weight-bold {
   font-weight: 700;
 }
+
+//
+// Font Family
+//
+
+.u-font-family-primary {
+  font-family: $g-font-family-primary;
+}
+
+.u-font-family-secondary {
+  font-family: $g-font-family-secondary;
+}
