--- a/src/components/ui/Box/Box.scss
+++ b/src/components/ui/Box/Box.scss
@@ -5,4 +5,9 @@
   border-style: solid;
   border-width: px-to-rem(1px);
   padding: pad(large) pad(small);
+  transition: 0.4s;
+
+  &:hover {
+    box-shadow: 1px 1px 30px rgba(51, 51, 51, 0.3);
+  }
 }
